   command, instead of including the "$explain" key in a mongoc_collection_find
   query. See the mongoc_collection_find documentation page for details.
 * Use constant-time comparision when verifying credentials
 * Combine environment's CFLAGS with configure options when building.
 * Improved man page output and "whatis" entries

Extensive bugfixes and improvements in GridFS, including:

 * Handle seeking, reading, and writing past the end of a GridFS file.
 * Better error reporting if a GridFS file has missing chunks.
 * Optimization for long seeks forward with mongoc_gridfs_file_seek.

Other fixes:

 * Memory leak in mongoc_database_find_collections.
 * Set OP_QUERY's nToReturn from the provided limit.
 * Fix compiler warnings and errors, especially with Visual Studio 2015,
   GCC 4.8, and IBM XL C.
 * Include missing build script FindSASL2.cmake in distribution tarball
 * Bugs and typos in tutorial examples

Thanks to everyone who contributed to this version of libmongoc.

 * A. Jesse Jiryu Davis
 * Hannes Magnusson
 * Kyle Suarez
 * Jose Sebastian Battig
 * Jeremy Mikola
 * Iago Rubio
 * Matt Cotter
 * alexeyvo

Peace,

  A. Jesse Jiryu Davis

  * If a GridFS chunk is missing, mongoc_gridfs_file_readv sets file->error to
    domain MONGOC_ERROR_GRIDFS and a new code MONGOC_ERROR_GRIDFS_CHUNK_MISSING.


mongo-c-driver 1.2.1
====================

It is my pleasure to announce to you the MongoDB C driver 1.2.1.

This release includes critical bugfixes for SSL connections with
mongoc_client_pool_t, and for Unix domain socket connections.

The documentation is updated for a change introduced in version 1.2.0:
mongoc_client_set_ssl_opts and mongoc_client_pool_set_ssl_opts now configure
the driver to require an SSL connection to the server, even if "ssl=true" is
omitted from the MongoDB URI. Before, SSL options were ignored unless
"ssl=true" was included in the URI.

The build instructions are improved, including the steps to build with OpenSSL