@@ -6,7 +6,8 @@
 
   <section id="basic-matching">
     <info><link type="guide" xref="index#matching"/></info>
-    <title>Basic Document Matching</title>
+    <title>Basic Document Matching (Deprecated)</title>
+    <note style="warning"><p>This feature will be removed in version 2.0.</p></note>
     <p>The MongoDB C driver supports matching a subset of the MongoDB query specification on the client.</p>
     <p>Currently, basic numeric, string, subdocument, and array equality, <code>$gt</code>, <code>$gte</code>, <code>$lt</code>, <code>$lte</code>, <code>$in</code>, <code>$nin</code>, <code>$ne</code>, <code>$exists</code>, <code>$type</code>, <code>$and</code>, and <code>$or</code> are supported. As this is not the same implementation as the MongoDB server, some inconsistencies may occur. Please file a bug if you find such a case.</p>
 
