@@ -21,6 +21,11 @@ mongoc_matcher_destroy (mongoc_matcher_t *matcher);
     <p>Release all resources associated with <code>matcher</code> including freeing the structure.</p>
   </section>
 
+  <section id="deprecated">
+    <title>Deprecated</title>
+    <note style="warning"><p><code>mongoc_matcher_t</code> is deprecated and will be removed in version 2.0.</p></note>
+  </section>
+
   <section id="parameters">
     <title>Parameters</title>
     <table>
