@@ -22,6 +22,11 @@ mongoc_matcher_match (const mongoc_matcher_t *matcher,
     <p>This function will check to see if the query compiled in <code>matcher</code> matches <code>document</code>.</p>
   </section>
 
+  <section id="deprecated">
+    <title>Deprecated</title>
+    <note style="warning"><p><code>mongoc_matcher_t</code> is deprecated and will be removed in version 2.0.</p></note>
+  </section>
+
   <section id="parameters">
     <title>Parameters</title>
     <table>
