@@ -31,10 +31,10 @@ typedef struct _mongoc_matcher_t mongoc_matcher_t;
 
 
 mongoc_matcher_t *mongoc_matcher_new     (const bson_t           *query,
-                                          bson_error_t           *error);
+                                          bson_error_t           *error)      BSON_GNUC_DEPRECATED;
 bool              mongoc_matcher_match   (const mongoc_matcher_t *matcher,
-                                          const bson_t           *document);
-void              mongoc_matcher_destroy (mongoc_matcher_t       *matcher);
+                                          const bson_t           *document)   BSON_GNUC_DEPRECATED;
+void              mongoc_matcher_destroy (mongoc_matcher_t       *matcher)    BSON_GNUC_DEPRECATED;
 
 
 BSON_END_DECLS
